--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+
 header {
     text-align: center;
 }
@@ -13,6 +21,7 @@ body {
     height: 70vh;
     position: relative;
     left: 24vw;
+    top: 10vh;
     border-radius: 50px 50px 0 0;
 }
 
@@ -48,4 +57,12 @@ body {
 
 form {
     position: absolute;
+    top: 27vh;
+    left: 11vw;
+}
+
+input {
+    display: block;
+    height: 30px;
+    width: 14vw;
 }
